[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robotframework-clang"
version = "1.0.6"
description = "Robot Framework library for Clang-REPL execution via xeus-cpp"
readme = "README.md"
authors = [
  { name = "Massimo Rossello", email = "ajbum6g7q@mozmail.com" },
]
license = "Apache-2.0"
classifiers = [
    "Framework :: Robot Framework",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "robotframework",
    "jupyter_client"
]
requires-python = ">=3.10,<3.14"

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx_rtd_theme",
    "docutils",
    "myst-parser"
]

[tool.setuptools.packages.find]
where = ["src"]

# --- PIXI CONFIGURATION ---

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]

[tool.pixi.environments]
linux = { features = [], solve-group = "default" }
windows = { features = [], solve-group = "default" }
osx = { features = [], solve-group = "default" }
default = { features = [], solve-group = "default" }

[tool.pixi.dependencies]
python = ">=3.10,<3.14"
pip = "*"
setuptools = ">=61.0"
xeus-cpp = "0.8.*"
clang = "21.*"
clangxx = "21.*"
# Project dependencies
robotframework = "*"
jupyter_client = "*"
docutils = "*"
# Build and Tooling
rattler-build = "*"
conda-forge-pinning = "*"
# Documentation
sphinx = "*"
sphinx_rtd_theme = "*"
myst-parser = "*"
anaconda-client = "*"

[tool.pixi.target.osx-64.dependencies]
libcxx-devel = "*"

[tool.pixi.target.osx-arm64.dependencies]
libcxx-devel = "*"

[tool.pixi.tasks]
# Installation
install = "pip install . --no-deps"

# Documentation generation
docs = { cmd = "python utils/libdoc2rst.py && sphinx-build -b html docs html && libdoc src/clang/clang.py html/libdoc.html", depends-on = ["install"] }

# Test (uses PYTHONPATH as fallback if not installed, but prefers installation)
test = { cmd = "robot $TESTOPTS -X --extension rst --outputdir logs/$PIXI_ENVIRONMENT_NAME docs", env = { PYTHONPATH = "src" } }

# Build Conda package via rattler-build (local development)
build-recipe = "rattler-build build --recipe recipe/recipe.yaml -m .pixi/envs/$PIXI_ENVIRONMENT_NAME/conda_build_config.yaml -m recipe/variants.yaml"
smoke = "pixi run -e $PIXI_ENVIRONMENT_NAME build-recipe --variant 'python=3.10.*' --variant 'is_python_min=true'"

# Build PyPI package
build-pypi = "pip install build && python -m build"

# Deploy to PyPI
deploy-pypi = { cmd = "pip install twine && twine upload dist/*", depends-on = ["build-pypi"] }

# Calculate SHA256 for conda-forge recipe (from GitHub tag) and update recipe.yaml
get-sha = "VERSION=$(grep -m 1 'version =' pyproject.toml | tr -d '\" ' | cut -d= -f2) && TAG=\"rf-clang-$VERSION\" && URL=\"https://github.com/maxrossello/robotframework-clang/archive/refs/tags/$TAG.tar.gz\" && echo \"Fetching: $URL\" && SHA=$(curl -L -s $URL | sha256sum | cut -d' ' -f1) && echo \"SHA256: $SHA\""

# Full release sequence
release = "git push -f && git push -f --tags && sleep 5 && pixi run get-sha"

# Full cleanup (same as Makefile)
clean = "python -c 'import shutil, os, glob; shutil.rmtree(\"html\", ignore_errors=True); shutil.rmtree(\"docs/_build\", ignore_errors=True); [os.remove(f) for f in [\"output.xml\", \"log.html\", \"report.html\"] if os.path.exists(f)]; [shutil.rmtree(egg) for egg in glob.glob(\"src/*.egg-info\")]; [shutil.rmtree(os.path.join(r, d)) for r, ds, fs in os.walk(\".\", topdown=False) for d in ds if d == \"__pycache__\"]'"
